[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "pybind11>=2.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "treeland-windowtree"
version = "0.1.0"
description = "Python client for Treeland WindowTree Qt Remote Object."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
treeland-windowtree = "treeland_windowtree.cli:main"

[tool.setuptools]
packages = ["treeland_windowtree"]
